--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,17 +29,21 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
+
+      - name: psycopg2 prerequisites
+        run: sudo apt-get install libpq-dev
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Set up database
+      - name: Run migrations
         run: |
-          psql -c 'create database truck_mate;' -U postgres
+          cd truckMate
           python manage.py migrate
 
-      - name: Run tests
+      - name: Run backend tests
         run: |
           cd truckMate
           python manage.py test truckMateApp.tests
