--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: truck_mate
-
+        container: postgres-container
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -25,7 +25,7 @@ jobs:
         with:
           python-version: 3.9
       - name: Check environment variables
-        run: docker exec -it ${{ job.services.postgres.name }} env
+        run: docker exec -it postgres-container env
 
       - name: psycopg2 prerequisites
         run: sudo apt-get install libpq-dev
