--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,6 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: github_actions
-          SECRET_KEY: ${{ secrets.SECRET_KEY }}
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -39,6 +38,8 @@ jobs:
           python manage.py migrate
 
       - name: Run backend tests
+        env:
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
         run: |
           cd truckMate
           python manage.py test truckMateApp.tests
