done with the backend endpoints

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Run migrations
         run: |
           cd truckMate
+          python manage.py makemigrations
           python manage.py migrate
 
       - name: Run backend tests
