--- a/truck_mate_front/package.json
+++ b/truck_mate_front/package.json
@@ -26,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "eslintConfig": {
     "extends": [
@@ -48,7 +50,9 @@
   },
   "devDependencies": {
     "@types/css-modules": "^1.0.2",
+    "@types/cypress": "^1.1.3",
     "css-loader": "^6.7.3",
+    "cypress": "^12.12.0",
     "style-loader": "^3.3.2"
   }
 }
