--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - name: psycopg2 prerequisites
         run: sudo apt-get install libpq-dev
 
-      - name: Install dependencies
+      - name: Install backend dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
@@ -44,3 +44,13 @@ jobs:
         run: |
           cd truckMate
           python manage.py test truckMateApp.tests
+
+      - name: Install frontend dependencies
+        run: | 
+          cd truck_mate_front
+          npm ci
+
+      - name: Run cypress tests
+        run: |
+          cd truck_mate_front
+          npm run cy:run
