--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,9 +51,11 @@ jobs:
           npm ci
 
       - name: Start the backend server
+        env:
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
         run: |
           cd truckMate
-          python manage.py runserver
+          python manage.py runserver -v 3
 
       - name: Wait for the backend server to start
         run: sleep 5
