--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,7 @@ jobs:
           npm ci
 
       - name: Run Cypress tests
+        run: cd truck_mate_front
         uses: cypress-io/github-action@v2
         with:
           build: npm run build
