--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Run Cypress tests
         uses: cypress-io/github-action@v2
         with:
-          build: npm run build
-          start: npm start
-        working-directory: truck_mate_front
+          build: npm --prefix ./truck_mate_front run build
+          start: npm --prefix ./truck_mate_front start
+
 
