--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Run Cypress tests
         uses: cypress-io/github-action@v2
         with:
-          working-directory: truck_mate_front/cypress
+          working-directory: truck_mate_front
           build: npm run build
           start: npm start
           wait-on: 'http://localhost:3000'
