--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,7 @@ jobs:
       - name: Run Cypress tests
         uses: cypress-io/github-action@v2
         with:
+          config-file: cypress.config.ts
           working-directory: truck_mate_front
           build: npm run build
           start: npm start
