--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,9 +54,9 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           working-directory: truck_mate_front
-#          build: npm run build
-#          start: npm start
-#          wait-on: 'http://localhost:3000'
+          build: npm run build
+          start: npm start
+          wait-on: 'http://localhost:3000'
 
 
 
