--- a/truckMate/requirements.txt
+++ b/truckMate/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.6.0
 boto3==1.26.133
 botocore==1.29.133
 dj-database-url==2.0.0
+dj-static==0.0.6
 Django==4.2
 django-cors-headers==3.14.0
 django-heroku==0.3.1
@@ -16,6 +17,7 @@ pytz==2023.3
 s3transfer==0.6.1
 six==1.16.0
 sqlparse==0.4.4
+static3==0.7.0
 typing_extensions==4.5.0
 urllib3==1.26.15
 whitenoise==6.4.0
