--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+        with:
+          working-directory: truckMate
 
       - name: Run migrations
         run: |
@@ -42,9 +44,9 @@ jobs:
         env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
         run: |
-          cd truckMate
           python manage.py test truckMateApp.tests
-
+        with:
+          working-directory: truckMate
       - name: Install frontend dependencies
         run: | 
           cd truck_mate_front
