--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-        with:
-          working-directory: truckMate
+        working-directory: ./truckMate
 
       - name: Run migrations
         run: |
@@ -45,8 +44,8 @@ jobs:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
         run: |
           python manage.py test truckMateApp.tests
-        with:
-          working-directory: truckMate
+        working-directory: ./truckMate
+
       - name: Install frontend dependencies
         run: | 
           cd truck_mate_front
