adjusted styling for small devices

--- a/truck_mate_front/tsconfig.json
+++ b/truck_mate_front/tsconfig.json
@@ -22,7 +22,8 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "types": [
-      "cypress"
+      "cypress",
+      "node"
     ],
   },
   "include": [
